update id property type to string with GUID format in eshopapi_v1.yml

--- a/eshopapi_v1.yml
+++ b/eshopapi_v1.yml
@@ -301,8 +301,9 @@ paths:
                   type: object
                   properties:
                     id:
-                      type: integer
-                      example: 1
+                      type: string
+                      format: guid
+                      example: 7e68b0ce-e037-49e6-bf75-7098ac91dfc5
                     name:
                       type: string
                       example: "Kategorie A"
