--- a/eshopapi_v1.yml
+++ b/eshopapi_v1.yml
@@ -1,5 +1,4 @@
 openapi: 3.0.0
-
 info:
   title: Eshop API
   description: API for managing the eshop with OIDC support
@@ -23,16 +22,16 @@ components:
             products.read: Read product list
             products.create: Adding a new product
             products.delete: Deleting a product
-            products.update: Aktualizace produktu
-            categories.read: Čtení seznamu kategorií
-            categories.create: Přidání nové kategorie
-            orders.read: Čtení seznamu objednávek
-            orders.create: Vytvoření nové objednávky
-            orders.update: Aktualizace objednávky
-            payments.create: Vytvoření platby
-            clients.read: Čtení seznamu klientů
-            clients.create: Přidání nového klienta
-            deliveries.schedule: Naplánování doručení
+            products.update: Updating a product
+            categories.read: Read category list
+            categories.create: Adding a new category
+            orders.read: Read order list
+            orders.create: Create a new order
+            orders.update: Update an order
+            payments.create: Create a payment
+            clients.read: Read client list
+            clients.create: Add a new client
+            deliveries.schedule: Schedule a delivery
   schemas:
     ProductStatus:
       type: string
@@ -56,7 +55,7 @@ components:
       name: tracestate
       in: header
       required: false
-      description: "Korelaci žádosti pro sledování toku dat."
+      description: "Correlation of the request for data flow tracking."
       schema:
         type: string
 
@@ -64,7 +63,7 @@ components:
       name: X-Client-IP
       in: header
       required: false
-      description: "IP adresa klienta, který provádí požadavek."
+      description: "IP address of the client making the request."
       schema:
         type: string
         format: ipv4
@@ -73,7 +72,7 @@ components:
       name: id
       in: path
       required: true
-      description: ID entity.
+      description: ID of the entity.
       schema:
         type: string
         format: guid
@@ -84,7 +83,7 @@ paths:
     get:
       tags:
         - products controller
-      summary: Získat seznam produktů
+      summary: Get product list
       operationId: getProducts
       security:
         - OIDC: [openid, profile, products.read]
@@ -93,7 +92,7 @@ paths:
         - $ref: "#/components/parameters/ClientIPHeader"
       responses:
         "200":
-          description: Úspěšná odpověď se seznamem produktů
+          description: Successful response with product list
           content:
             application/json:
               schema:
@@ -107,7 +106,7 @@ paths:
                       example: 7e68b0ce-e037-49e6-bf75-7098ac91dfc5
                     name:
                       type: string
-                      example: "Produkt A"
+                      example: "Product A"
                     price:
                       type: number
                       format: float
@@ -117,7 +116,7 @@ paths:
     post:
       tags:
         - products controller
-      summary: Přidat nový produkt
+      summary: Add a new product
       operationId: addProduct
       security:
         - OIDC: [openid, profile, products.create]
@@ -133,7 +132,7 @@ paths:
               properties:
                 name:
                   type: string
-                  example: "Nový Produkt"
+                  example: "New Product"
                 price:
                   type: number
                   format: float
@@ -142,7 +141,7 @@ paths:
                   $ref: "#/components/schemas/ProductStatus"
       responses:
         "201":
-          description: Produkt byl úspěšně přidán.
+          description: Product successfully added.
           content:
             application/json:
               schema:
@@ -153,7 +152,7 @@ paths:
                     example: "7e68b0ce-e037-49e6-bf75-7098ac91dfc5"
                   name:
                     type: string
-                    example: "Nový Produkt"
+                    example: "New Product"
                   price:
                     type: number
                     format: float
@@ -161,7 +160,7 @@ paths:
                   status:
                     $ref: "#/components/schemas/ProductStatus"
         "400":
-          description: Chybný požadavek.
+          description: Bad request.
           content:
             application/json:
               schema:
@@ -169,13 +168,13 @@ paths:
                 properties:
                   error:
                     type: string
-                    example: "Chybí povinné pole 'name'."
+                    example: "Missing required field 'name'."
 
   /products/{id}:
     get:
       tags:
         - products controller
-      summary: Získat detail produktu podle ID.
+      summary: Get product details by ID
       operationId: getProductById
       parameters:
         - $ref: "#/components/parameters/IdPath"
@@ -185,7 +184,7 @@ paths:
         - OIDC: [openid, profile, products.read]
       responses:
         "200":
-          description: Úspěšná odpověď s detaily produktu.
+          description: Successful response with product details.
           content:
             application/json:
               schema:
@@ -197,7 +196,7 @@ paths:
                     example: 7e68b0ce-e037-49e6-bf75-7098ac91dfc5
                   name:
                     type: string
-                    example: "Produkt A"
+                    example: "Product A"
                   price:
                     type: number
                     format: float
@@ -205,7 +204,7 @@ paths:
                   status:
                     $ref: "#/components/schemas/ProductStatus"
         "404":
-          description: Produkt nenalezen.
+          description: Product not found.
           content:
             application/json:
               schema:
@@ -213,12 +212,12 @@ paths:
                 properties:
                   error:
                     type: string
-                    example: "Produkt s ID 1 nebyl nalezen."
+                    example: "Product with ID 1 not found."
 
     put:
       tags:
         - products controller
-      summary: Aktualizovat produkt podle ID.
+      summary: Update product by ID
       operationId: updateProduct
       parameters:
         - $ref: "#/components/parameters/IdPath"
@@ -235,7 +234,7 @@ paths:
               properties:
                 name:
                   type: string
-                  example: "Aktualizovaný Produkt"
+                  example: "Updated Product"
                 price:
                   type: number
                   format: float
@@ -244,9 +243,9 @@ paths:
                   $ref: "#/components/schemas/ProductStatus"
       responses:
         "200":
-          description: Produkt byl úspěšně aktualizován.
+          description: Product successfully updated.
         "404":
-          description: Produkt nenalezen.
+          description: Product not found.
           content:
             application/json:
               schema:
@@ -254,11 +253,11 @@ paths:
                 properties:
                   error:
                     type: string
-                    example: "Produkt s ID 1 nebyl nalezen."
+                    example: "Product with ID 1 not found."
     delete:
       tags:
         - products controller
-      summary: Smazat produkt podle ID.
+      summary: Delete product by ID
       operationId: deleteProduct
       parameters:
         - $ref: "#/components/parameters/IdPath"
@@ -268,9 +267,9 @@ paths:
         - OIDC: [openid, profile, products.delete]
       responses:
         "204":
-          description: Produkt byl úspěšně smazán.
+          description: Product successfully deleted.
         "404":
-          description: Produkt nenalezen.
+          description: Product not found.
           content:
             application/json:
               schema:
@@ -278,12 +277,12 @@ paths:
                 properties:
                   error:
                     type: string
-                    example: "Produkt s ID 1 nebyl nalezen."
+                    example: "Product with ID 1 not found."
   /categories:
     get:
       tags:
         - categories controller
-      summary: Získat seznam kategorií
+      summary: Get category list
       operationId: getCategories
       security:
         - OIDC: [openid, profile, categories.read]
@@ -292,7 +291,7 @@ paths:
         - $ref: "#/components/parameters/ClientIPHeader"
       responses:
         "200":
-          description: Úspěšná odpověď se seznamem kategorií
+          description: Successful response with category list
           content:
             application/json:
               schema:
@@ -306,9 +305,9 @@ paths:
                       example: 7e68b0ce-e037-49e6-bf75-7098ac91dfc5
                     name:
                       type: string
-                      example: "Kategorie A"
+                      example: "Category A"
         "401":
-          description: Neautorizovaný přístup
+          description: Unauthorized access
           content:
             application/json:
               schema:
@@ -316,11 +315,11 @@ paths:
                 properties:
                   error:
                     type: string
-                    example: "Neplatný token"
+                    example: "Invalid token"
     post:
       tags:
         - categories controller
-      summary: Přidat novou kategorii
+      summary: Add a new category
       operationId: addCategory
       security:
         - OIDC: [openid, profile, categories.create]
@@ -336,12 +335,12 @@ paths:
               properties:
                 name:
                   type: string
-                  example: "Nová Kategorie"
+                  example: "New Category"
       responses:
         "201":
-          description: Kategorie byla úspěšně přidána.
+          description: Category successfully added.
         "400":
-          description: Chybný požadavek.
+          description: Bad request.
           content:
             application/json:
               schema:
@@ -349,12 +348,12 @@ paths:
                 properties:
                   error:
                     type: string
-                    example: "Chybí povinné pole 'name'."
+                    example: "Missing required field 'name'."
   /orders:
     get:
       tags:
         - orders controller
-      summary: Získat seznam objednávek
+      summary: Get order list
       operationId: getOrders
       security:
         - OIDC: [openid, profile, orders.read]
@@ -363,7 +362,7 @@ paths:
         - $ref: "#/components/parameters/ClientIPHeader"
       responses:
         "200":
-          description: Úspěšná odpověď se seznamem objednávek
+          description: Successful response with order list
           content:
             application/json:
               schema:
@@ -381,11 +380,11 @@ paths:
                       example: 19.99
                     status:
                       type: string
-                      example: "Zpracováno"
+                      example: "Processed"
     post:
       tags:
         - orders controller
-      summary: Přidat novou objednávku
+      summary: Create a new order
       operationId: createOrder
       security:
         - OIDC: [openid, profile, orders.create]
@@ -411,9 +410,9 @@ paths:
                     example: [2]
       responses:
         "201":
-          description: Objednávka byla úspěšně vytvořena.
+          description: Order successfully created.
         "400":
-          description: Chybný požadavek.
+          description: Bad request.
           content:
             application/json:
               schema:
@@ -421,12 +420,12 @@ paths:
                 properties:
                   error:
                     type: string
-                    example: "Chybí povinné pole 'productIds'."
+                    example: "Missing required field 'productIds'."
   /orders/{id}:
     get:
       tags:
         - orders controller
-      summary: Získat detail objednávky podle ID
+      summary: Get order details by ID
       operationId: getOrderById
       parameters:
         - $ref: "#/components/parameters/IdPath"
@@ -436,7 +435,7 @@ paths:
         - OIDC: [openid, profile, orders.read]
       responses:
         "200":
-          description: Úspěšná odpověď s detaily objednávky
+          description: Successful response with order details
           content:
             application/json:
               schema:
@@ -451,9 +450,9 @@ paths:
                     example: 1
                   status:
                     type: string
-                    example: "Zpracováno"
+                    example: "Processed"
         "404":
-          description: Objednávka nenalezena.
+          description: Order not found.
           content:
             application/json:
               schema:
@@ -461,13 +460,13 @@ paths:
                 properties:
                   error:
                     type: string
-                    example: "Objednávka s ID 125125 nebyla nalezena"
+                    example: "Order with ID 125125 not found"
 
   /clients:
     get:
       tags:
         - clients controller
-      summary: Získat seznam klientů
+      summary: Get client list
       operationId: getClients
       security:
         - OIDC: [openid, profile, clients.read]
@@ -476,7 +475,7 @@ paths:
         - $ref: "#/components/parameters/ClientIPHeader"
       responses:
         "200":
-          description: Úspěšná odpověď se seznamem klientů
+          description: Successful response with client list
           content:
             application/json:
               schema:
@@ -494,7 +493,7 @@ paths:
     post:
       tags:
         - clients controller
-      summary: Přidat nového klienta
+      summary: Add a new client
       operationId: addClient
       security:
         - OIDC: [openid, profile, clients.create]
@@ -513,9 +512,9 @@ paths:
                   example: "newclient@example.com"
       responses:
         "201":
-          description: Klient byl úspěšně přidán.
+          description: Client successfully added.
         "400":
-          description: Chybný požadavek.
+          description: Bad request.
           content:
             application/json:
               schema:
@@ -523,13 +522,13 @@ paths:
                 properties:
                   error:
                     type: string
-                    example: "Chybí povinné pole 'email'."
+                    example: "Missing required field 'email'."
 
   /payments:
     post:
       tags:
         - payments controller
-      summary: Vytvořit platbu
+      summary: Create a payment
       operationId: createPayment
       security:
         - OIDC: [openid, profile, payments.create]
@@ -556,9 +555,9 @@ paths:
                   example: 100.00
       responses:
         "201":
-          description: Platba byla úspěšně vytvořena.
+          description: Payment successfully created.
         "400":
-          description: Chybný požadavek.
+          description: Bad request.
           content:
             application/json:
               schema:
@@ -566,12 +565,12 @@ paths:
                 properties:
                   error:
                     type: string
-                    example: "Chybí povinné pole 'orderId'."
+                    example: "Missing required field 'orderId'."
   /deliveries:
     post:
       tags:
         - deliveries controller
-      summary: Naplánovat doručení
+      summary: Schedule a delivery
       operationId: scheduleDelivery
       security:
         - OIDC: [openid, profile, deliveries.schedule]
@@ -595,9 +594,9 @@ paths:
                   example: "2023-10-01"
       responses:
         "201":
-          description: Doručení bylo úspěšně naplánováno.
+          description: Delivery successfully scheduled.
         "400":
-          description: Chybný požadavek.
+          description: Bad request.
           content:
             application/json:
               schema:
@@ -605,4 +604,4 @@ paths:
                 properties:
                   error:
                     type: string
-                    example: "Chybí povinné pole 'orderId'."
+                    example: "Missing required field 'orderId'."
