--- a/eshopapi_v1.yml
+++ b/eshopapi_v1.yml
@@ -32,7 +32,88 @@ components:
             clients.read: Read client list
             clients.create: Add a new client
             deliveries.schedule: Schedule a delivery
+
   schemas:
+    Product:
+      type: object
+      properties:
+        id:
+          type: string
+          format: guid
+        name:
+          type: string
+        price:
+          type: number
+          format: float
+        status:
+          $ref: "#/components/schemas/ProductStatus"
+        categoryId:
+          type: string
+          format: guid
+
+    Category:
+      type: object
+      properties:
+        id:
+          type: string
+          format: guid
+        name:
+          type: string
+
+    Order:
+      type: object
+      properties:
+        id:
+          type: string
+          format: guid
+        totalPrice:
+          type: number
+          format: float
+        status:
+          $ref: "#/components/schemas/OrderStatus"
+        productIds:
+          type: array
+          items:
+            type: string
+            format: guid
+
+    Client:
+      type: object
+      properties:
+        id:
+          type: string
+          format: guid
+        email:
+          type: string
+
+    Payment:
+      type: object
+      properties:
+        id:
+          type: string
+          format: guid
+        orderId:
+          type: string
+          format: guid
+        method:
+          type: string
+        amount:
+          type: number
+          format: float
+
+    Delivery:
+      type: object
+      properties:
+        id:
+          type: string
+          format: guid
+        orderId:
+          type: string
+          format: guid
+        deliveryDate:
+          type: string
+          format: date
+
     ProductStatus:
       type: string
       enum:
@@ -98,21 +179,7 @@ paths:
               schema:
                 type: array
                 items:
-                  type: object
-                  properties:
-                    id:
-                      type: string
-                      format: guid
-                      example: 7e68b0ce-e037-49e6-bf75-7098ac91dfc5
-                    name:
-                      type: string
-                      example: "Product A"
-                    price:
-                      type: number
-                      format: float
-                      example: 19.99
-                    status:
-                      $ref: "#/components/schemas/ProductStatus"
+                  $ref: "#/components/schemas/Product"
     post:
       tags:
         - products controller
@@ -128,37 +195,14 @@ paths:
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                name:
-                  type: string
-                  example: "New Product"
-                price:
-                  type: number
-                  format: float
-                  example: 29.99
-                status:
-                  $ref: "#/components/schemas/ProductStatus"
+              $ref: "#/components/schemas/Product"
       responses:
         "201":
           description: Product successfully added.
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  id:
-                    type: string
-                    example: "7e68b0ce-e037-49e6-bf75-7098ac91dfc5"
-                  name:
-                    type: string
-                    example: "New Product"
-                  price:
-                    type: number
-                    format: float
-                    example: 29.99
-                  status:
-                    $ref: "#/components/schemas/ProductStatus"
+                $ref: "#/components/schemas/Product"
         "400":
           description: Bad request.
           content:
@@ -188,21 +232,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  id:
-                    type: string
-                    format: guid
-                    example: 7e68b0ce-e037-49e6-bf75-7098ac91dfc5
-                  name:
-                    type: string
-                    example: "Product A"
-                  price:
-                    type: number
-                    format: float
-                    example: 19.99
-                  status:
-                    $ref: "#/components/schemas/ProductStatus"
+                $ref: "#/components/schemas/Product"
         "404":
           description: Product not found.
           content:
@@ -230,17 +260,7 @@ paths:
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                name:
-                  type: string
-                  example: "Updated Product"
-                price:
-                  type: number
-                  format: float
-                  example: 25.99
-                status:
-                  $ref: "#/components/schemas/ProductStatus"
+              $ref: "#/components/schemas/Product"
       responses:
         "200":
           description: Product successfully updated.
@@ -278,6 +298,7 @@ paths:
                   error:
                     type: string
                     example: "Product with ID 1 not found."
+
   /categories:
     get:
       tags:
@@ -297,15 +318,7 @@ paths:
               schema:
                 type: array
                 items:
-                  type: object
-                  properties:
-                    id:
-                      type: string
-                      format: guid
-                      example: 7e68b0ce-e037-49e6-bf75-7098ac91dfc5
-                    name:
-                      type: string
-                      example: "Category A"
+                  $ref: "#/components/schemas/Category"
         "401":
           description: Unauthorized access
           content:
@@ -331,11 +344,7 @@ paths:
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                name:
-                  type: string
-                  example: "New Category"
+              $ref: "#/components/schemas/Category"
       responses:
         "201":
           description: Category successfully added.
@@ -349,6 +358,7 @@ paths:
                   error:
                     type: string
                     example: "Missing required field 'name'."
+
   /orders:
     get:
       tags:
@@ -368,19 +378,7 @@ paths:
               schema:
                 type: array
                 items:
-                  type: object
-                  properties:
-                    id:
-                      type: string
-                      format: guid
-                      example: 7e68b0ce-e037-49e6-bf75-7098ac91dfc5
-                    totalPrice:
-                      type: number
-                      format: float
-                      example: 19.99
-                    status:
-                      type: string
-                      example: "Processed"
+                  $ref: "#/components/schemas/Order"
     post:
       tags:
         - orders controller
@@ -396,18 +394,7 @@ paths:
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                productIds:
-                  type: array
-                  items:
-                    type: integer
-                  example: [1, 2, 3]
-                quantities:
-                  type: array
-                  items:
-                    type: number
-                    example: [2]
+              $ref: "#/components/schemas/Order"
       responses:
         "201":
           description: Order successfully created.
@@ -421,6 +408,7 @@ paths:
                   error:
                     type: string
                     example: "Missing required field 'productIds'."
+
   /orders/{id}:
     get:
       tags:
@@ -439,18 +427,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  id:
-                    type: string
-                    format: guid
-                    example: 7e68b0ce-e037-49e6-bf75-7098ac91dfc5
-                  totalPrice:
-                    type: integer
-                    example: 1
-                  status:
-                    type: string
-                    example: "Processed"
+                $ref: "#/components/schemas/Order"
         "404":
           description: Order not found.
           content:
@@ -481,15 +458,7 @@ paths:
               schema:
                 type: array
                 items:
-                  type: object
-                  properties:
-                    id:
-                      type: string
-                      format: guid
-                      example: 7e68b0ce-e037-49e6-bf75-7098ac91dfc5
-                    email:
-                      type: string
-                      example: "client@example.com"
+                  $ref: "#/components/schemas/Client"
     post:
       tags:
         - clients controller
@@ -505,11 +474,7 @@ paths:
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                email:
-                  type: string
-                  example: "newclient@example.com"
+              $ref: "#/components/schemas/Client"
       responses:
         "201":
           description: Client successfully added.
@@ -540,19 +505,7 @@ paths:
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                orderId:
-                  type: string
-                  format: guid
-                  example: "7e68b0ce-e037-49e6-bf75-7098ac91dfc5"
-                method:
-                  type: string
-                  example: "credit_card"
-                amount:
-                  type: number
-                  format: float
-                  example: 100.00
+              $ref: "#/components/schemas/Payment"
       responses:
         "201":
           description: Payment successfully created.
@@ -566,6 +519,7 @@ paths:
                   error:
                     type: string
                     example: "Missing required field 'orderId'."
+
   /deliveries:
     post:
       tags:
@@ -582,16 +536,7 @@ paths:
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                orderId:
-                  type: string
-                  format: guid
-                  example: "7e68b0ce-e037-49e6-bf75-7098ac91dfc5"
-                deliveryDate:
-                  type: string
-                  format: date
-                  example: "2023-10-01"
+              $ref: "#/components/schemas/Delivery"
       responses:
         "201":
           description: Delivery successfully scheduled.
