--- a/eshopapi_v1.yml
+++ b/eshopapi_v1.yml
@@ -5,8 +5,15 @@ info:
   version: 1.1.1
 
 servers:
-  - url: https://eshop.example.com/v1
-  - url: http://localhost:3000/
+  - url: "{protocol}://{host}"
+    variables:
+      protocol:
+        enum:
+          - http
+          - https
+        default: http
+      host:
+        default: localhost:3000
 
 components:
   securitySchemes:
@@ -14,8 +21,8 @@ components:
       type: oauth2
       flows:
         authorizationCode:
-          authorizationUrl: https://auth.example.com/oauth2/authorize
-          tokenUrl: https://auth.example.com/oauth2/token
+          authorizationUrl: "http://localhost:3000/auth/oauth2/authorize"
+          tokenUrl: "http://localhost:3000/auth/oauth2/token"
           scopes:
             openid: Obtain user identifier
             profile: Access to user profile
