--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "express-hateoas-links": "^1.3.1",
     "jsonwebtoken": "^9.0.2",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^8.3.2",
